Fix posts not showing whitespace in content correctly

--- a/public/res/css/posts.css
+++ b/public/res/css/posts.css
@@ -28,6 +28,10 @@
   font-size: 1.5rem;
 }
 
+.post .content {
+  white-space: pre-wrap;
+}
+
 .post p {
   margin: 15px 0 15px 0;
 }
